"""Functional tests BUILD file"""

load("@pip_dev//:requirements.bzl", dev_requirement = "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

# Common environment for all functional tests
COMMON_ENV = {
    "PYTEST_CURRENT_TEST": "bazel_test",
    "FAMILY_ASSISTANT_DISABLE_DB_ERROR_LOGGING": "1",
}

# Common dependencies for functional tests
COMMON_DEPS = [
    "//src/family_assistant/testing",
    "//src/family_assistant/testing/mocks",
    dev_requirement("pytest"),
    dev_requirement("pytest-asyncio"),
    dev_requirement("aiosqlite"),
]

# Smoke test for notes functionality
py_test(
    name = "test_smoke_notes",
    srcs = ["test_smoke_notes.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS + [
        "//src/family_assistant:context_providers",
        "//src/family_assistant:processing",
        "//src/family_assistant/llm",
        "//src/family_assistant/storage:context",
        "//src/family_assistant/tools",
    ],
)

# Note tools test
py_test(
    name = "test_note_tools",
    srcs = ["test_note_tools.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS + [
        "//src/family_assistant:context_providers",
        "//src/family_assistant:processing",
        "//src/family_assistant/llm",
        "//src/family_assistant/storage:context",
        "//src/family_assistant/tools",
    ],
)

# Smoke callback test
py_test(
    name = "test_smoke_callback",
    srcs = ["test_smoke_callback.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS,
)

# Event system tests
py_test(
    name = "test_event_system",
    srcs = ["test_event_system.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS,
)

py_test(
    name = "test_event_listener_crud",
    srcs = ["test_event_listener_crud.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS,
)

py_test(
    name = "test_event_listener_validation",
    srcs = ["test_event_listener_validation.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS,
)

# Task worker tests
py_test(
    name = "test_task_worker_resilience",
    srcs = ["test_task_worker_resilience.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS,
)

py_test(
    name = "test_task_error_column",
    srcs = ["test_task_error_column.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS,
)

# Error logging test
py_test(
    name = "test_error_logging",
    srcs = ["test_error_logging.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS,
)

# Script execution tests
py_test(
    name = "test_script_execution_handler",
    srcs = ["test_script_execution_handler.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS + [
        dev_requirement("starlark-pyo3"),
    ],
)

py_test(
    name = "test_script_wake_llm",
    srcs = ["test_script_wake_llm.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS + [
        dev_requirement("starlark-pyo3"),
    ],
)

py_test(
    name = "test_scheduled_script_execution",
    srcs = ["test_scheduled_script_execution.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS + [
        dev_requirement("starlark-pyo3"),
    ],
)

py_test(
    name = "test_event_listener_script_tools",
    srcs = ["test_event_listener_script_tools.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS + [
        dev_requirement("starlark-pyo3"),
    ],
)

py_test(
    name = "test_event_script_integration",
    srcs = ["test_event_script_integration.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS + [
        dev_requirement("starlark-pyo3"),
    ],
)

# Delegation test
py_test(
    name = "test_delegation",
    srcs = ["test_delegation.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS,
)

# Notes context and prompt tests
py_test(
    name = "test_notes_context_provider",
    srcs = ["test_notes_context_provider.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS,
)

py_test(
    name = "test_notes_prompt_inclusion",
    srcs = ["test_notes_prompt_inclusion.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS,
)

# Vector storage test
py_test(
    name = "test_vector_storage",
    srcs = ["test_vector_storage.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS,
)

# Recurring task timezone test
py_test(
    name = "test_recurring_task_timezone",
    srcs = ["test_recurring_task_timezone.py"],
    env = COMMON_ENV,
    tags = [
        "functional",
        "sqlite",
    ],
    deps = COMMON_DEPS,
)

# Test suite for all SQLite functional tests
test_suite(
    name = "sqlite",
    tests = [
        ":test_delegation",
        ":test_error_logging",
        ":test_event_listener_crud",
        ":test_event_listener_script_tools",
        ":test_event_listener_validation",
        ":test_event_script_integration",
        ":test_event_system",
        ":test_note_tools",
        ":test_notes_context_provider",
        ":test_notes_prompt_inclusion",
        ":test_recurring_task_timezone",
        ":test_scheduled_script_execution",
        ":test_script_execution_handler",
        ":test_script_wake_llm",
        ":test_smoke_callback",
        ":test_smoke_notes",
        ":test_task_error_column",
        ":test_task_worker_resilience",
        ":test_vector_storage",
        "//tests/functional/scripting",  # Scripting tests
        "//tests/functional/storage",  # Storage tests
        "//tests/functional/tools",  # Tools tests
        "//tests/functional/web",  # Web tests that work with Bazel
    ],
)
