"""Unit tests BUILD file"""

load("@pip_dev//:requirements.bzl", dev_requirement = "requirement")
load("@rules_python//python:defs.bzl", "py_test")

# Simple unit test example
py_test(
    name = "test_embeddings",
    srcs = ["test_embeddings.py"],
    env = {
        "PYTHONPATH": "src",
    },
    tags = ["unit"],
    deps = [
        "//src/family_assistant",
        "//tests:test_utils",
        dev_requirement("pytest"),
        dev_requirement("numpy"),
    ],
)

py_test(
    name = "test_event_match_conditions",
    srcs = ["test_event_match_conditions.py"],
    env = {
        "PYTHONPATH": "src",
    },
    tags = ["unit"],
    deps = [
        "//src/family_assistant",
        "//tests:test_utils",
        dev_requirement("pytest"),
    ],
)

# Test all unit tests
test_suite(
    name = "unit",
    tests = [
        ":test_embeddings",
        ":test_event_match_conditions",
    ],
)
